@@ -1,5 +1,6 @@
 clasp 3.3.4:
   * fixed: Atoms of incremental programs not always marked as frozen.
+  * added internal interface for user defined statistics
 
 clasp 3.3.3: Sunday, 5th November 2017
   * fixed: possible race condition in Windows alarm handling (libpotassco)
